--- a/src/backend/garden.yml
+++ b/src/backend/garden.yml
@@ -20,13 +20,15 @@ services:
         containerPort: 3000
     env:
       BACKEND_USER: ${var.user}
-      BACKEND_PASSWORD: ${var.password}
+      BACKEND_PASSWORD:
+        secretRef:
+          name: my-secrets
+          key: password
     healthCheck:
       httpGet:
         path: /
         port: api
     ingresses:
-      # Do we really have to list every endpoint?
       - path: /random
         port: api
         hostname: backend.${var.hostname}
